--- a/public/index.html
+++ b/public/index.html
@@ -104,6 +104,22 @@
             transition: border-color 0.3s;
         }
 
+        select {
+            background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='12' height='12' viewBox='0 0 12 12'%3E%3Cpath fill='%23606266' d='M6 9L1 4h10z'/%3E%3C/svg%3E");
+            background-repeat: no-repeat;
+            background-position: right 12px center;
+            background-size: 12px;
+            padding-right: 32px;
+            appearance: none;
+            -webkit-appearance: none;
+            -moz-appearance: none;
+        }
+
+        select[multiple] {
+            background-image: none;
+            padding-right: 12px;
+        }
+
         input:focus, select:focus, textarea:focus {
             outline: none;
             border-color: #409eff;
